RadTest Dev/src/objects/Sales_Team__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FR_Name__c</fullName>
        <inlineHelpText>Enter the Field Rep Name</inlineHelpText>
        <label>FR Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sales Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>